<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    android:paddingHorizontal="30dp"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_text1"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/create_text2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ise_logo"
                    app:shapeAppearanceOverlay="@style/Circular" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:src="@color/white"
                    app:shapeAppearanceOverlay="@style/Circular" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/create_text5" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:padding="5dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/activityNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/ActivityNameInputHint"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp" />


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/create_text3" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:padding="5dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:text="" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/datePickerButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/calendarDescription"
                        android:paddingEnd="10dp"
                        android:src="@drawable/baseline_calendar_month_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/deleteDateButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:contentDescription="@string/crossBtnDescription"
                        android:src="@drawable/baseline_close_24"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/create_text4" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/startTimeButton"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <TextView
                        android:id="@+id/startText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="12:00" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:paddingEnd="10dp"
                        android:src="@drawable/baseline_alarm_24" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="15dp"
                    android:text="to" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/endTimeButton"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp">

                    <TextView
                        android:id="@+id/endText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="12:00" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:paddingEnd="10dp"
                        android:src="@drawable/baseline_alarm_24" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/create_text9" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:padding="5dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">

                <EditText
                    android:id="@+id/locationNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/ActivityNameInputHint"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp" />


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/create_text6" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:padding="5dp"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">


                    <ImageView
                        android:id="@+id/previewMap"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/locationMarker"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/locationMarkerDescription"
                        android:paddingEnd="10dp"
                        android:src="@drawable/baseline_location_on_24_b"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/locationPickerButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/lightGreen"
                app:cardCornerRadius="10dp"
                app:strokeColor="@color/DarkBlue"
                app:strokeWidth="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancelButtonText"
                    android:textAlignment="center"
                    android:textColor="@color/DarkBlue"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/DarkBlue"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/createButtonText"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>